--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 shellsort  using fibonacci seqence make inxreasing speed  1:5  with fibonaci and without
+see  Concrete Mathematics. A Foundation for Computer Science 364
