--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 shellsort  using fibonacci seqence make inxreasing speed  1:5  with fibonaci and without
 see  Concrete Mathematics. A Foundation for Computer Science 364
+
+various decomposition (step) gives different result(faster)
